# rustic-wave

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
ansible/: ansible.cfg  setup-dev.yml
config/: Cargo.toml
config/src/: lib.rs
docs/: architecture.md
frontend/: Cargo.toml  README.md  index.html
frontend/src/: main.rs
frontend/src/components/: header.rs  layout.rs
frontend/src/pages/: home.rs
frontend/src/styles/: styles.css
frontend/src/utils/: helpers.rs
frontend/tests/: frontend_tests.rs
infrastructure/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/modules/cdn/: main.tf  variables.tf
infrastructure/modules/dns/: main.tf  variables.tf
infrastructure/modules/storage/: main.tf  variables.tf
infrastructure/tests/: go.mod  integration_test.go
scripts/: build.sh  deploy.sh  terraform.sh
