[package]
name = "rustic_wave_frontend"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"
chrono = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
src = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[[bin]]
name = "rustic_wave_frontend"
src = "src/main.rs"
